--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 @import "tailwindcss";
 :root {
-  /* font-family: system-ui, Avenir, Helvetica, Arial, sans-serif; */
-  line-height: 1.5;
+  font-family: Helvetica;
+  line-height: 1;
   font-weight: 400;
+  letter-spacing: 1.5em;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
